# ai-model-risk-management

./: README.md  audit_log.jsonl  pyproject.toml  setup.cfg
.github/workflows/: governance-gate.yml
artifacts/credit_default_lr/: change_log.md  data_sheet.md  model_card.md  monitoring_plan.md  validation_report.md
controls/: mrm_controls.yaml
govcli/: artifacts.py  audit.py  cli.py  controls.py  gate.py  risk.py  schemas.py
models/credit_default_lr/: data_sources.yaml  model.yaml
